# tc-ep3-assesment

./: .gitignore
s1tm-2-2/: .devcontainer.json  dune  dune-project  s1tm.ml
s1tm-2-2/_build/: .db  .digest-db  log
s1tm-2-2/_build/default/: s1tm.pp.ml
s1tm-2-2/_build/default/.dune/: configurator  configurator.v2
s1tm-2-2/_build/default/.merlin-conf/: exe-s1tm
s1tm-2-2/_build/default/.ppx/88e824b04a1878b73d6eb96f89318990/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
s1tm-2-2/_build/default/.s1tm.eobjs/byte/: dune__exe__S1tm.cmi  dune__exe__S1tm.cmti
s1tm-2-2/_build/default/.s1tm.eobjs/native/: dune__exe__S1tm.cmx
s1tm-2-2/_build/default/test/: test01.out
s1tm-2-2/s1tm-extra-tests-v2/: README.txt  run_extra_tests.sh
s1tm-2-2/s1tm-extra-tests-v2/extra_tests/: t01_accept0.exp  t01_accept0.in  t02_reject0.exp  t02_reject0.in  t03_empty_word_accept.in  t05_right_extend_append_c.exp  t05_right_extend_append_c.in  t06_internal_blank_kept.exp  t06_internal_blank_kept.in  t07_write_blank_accept.in  t08_missing_transition_no.exp  t10_invalid_word_symbol.in  t11_invalid_missing_blank_in_tape_alpha.in  t12_invalid_unknown_state_in_delta.in  t13_invalid_write_symbol_not_in_tape_alpha.in  t14_invalid_read_symbol_not_in_tape_alpha.in
s1tm-2-2/s1tm-extra-tests-v3/: run_extra_tests_v3.sh
s1tm-2-2/s1tm-extra-tests-v3/extra_tests_v3/: t17_anbn_accept_aabb.exp  t17_anbn_accept_aabb.in  t18_anbn_reject_abbb.exp  t18_anbn_reject_abbb.in  t19_anbn_accept_empty.in  t21_inc_111_to_1000.exp  t23_inc_0011_to_0100.exp  t23_inc_0011_to_0100.in  t24_anbn_accept_aaabbb.exp  t24_anbn_accept_aaabbb.in  t25_anbn_reject_bbaa.in
s1tm-2-2/s1tm-extra-tests-v4/: README.txt  run_extra_tests_v4.sh
s1tm-2-2/s1tm-extra-tests-v4/extra_tests_v4/: t15_boundary_199_accept.in  t16_boundary_201_dont_know.in  t17_match_accept_aabb.in  t18_match_reject_abbb.exp  t18_match_reject_abbb.in  t19_match_accept_empty.in  t20_inc_0_to_1.in  t21_inc_111_to_1000.in  t22_inc_1011_to_1100.exp  t25_match_reject_bbaa.exp
s1tm-2-2/s1tm-extra-tests-v5/: README.txt  run_extra_tests_v5.sh
s1tm-2-2/s1tm-extra-tests-v5/extra_tests_v5/: t15_boundary_199_accept.exp  t16_boundary_201_dont_know.exp  t17_match_accept_aabb.exp  t20_inc_0_to_1.exp  t22_inc_1011_to_1100.in  t24_match_accept_aaabbb.exp  t24_match_accept_aaabbb.in  t25_match_reject_bbaa.in  t26_symbolY_unused_should_accept.in  t27_pal_accept_abba.exp  t27_pal_accept_abba.in  t28_pal_accept_aba.exp  t28_pal_accept_aba.in  t29_pal_reject_abab.exp  t29_pal_reject_abab.in  t30_pal_accept_empty.in  t31_pal_reject_ba.exp  t31_pal_reject_ba.in  t32_left2_write_B.exp  t32_left2_write_B.in
s1tm-2-2/test/: debug_noblank.in  debug_t04.exp  debug_t04.in  debug_t08.in  debug_t09.in  dune  test01.in  test02.exp  test02.in  test03.in  test04.exp  test04.in  test06.in  test07.exp  test07.in  test09.in  test10.exp  test10.in  test12.exp  test15.exp  test16.exp  test16.in  test17.exp  test17.in  test18.in  test50.in  test51.in  test52.in  test53.exp  test53.in  test60.exp  test60.in  test61.exp  test61.in  test62.exp  test62.in  test63.exp  test63.in
